Weird rendering of points with velocity attribute #103918
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#103918
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Linux-5.15.0-58-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.60.13
Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-01-16 11:41, hash:
154d3e95f8
also broken: 3.4.1, 3.3.2
Worked: Never?
Short description of error
Shading of points is totally broken in Cycles when using a "velocity" attribute. I noticed this during a project that needs motion blur on point clouds.
At first I thought it was something broken with the incoming Alembics (I use 2 to work around the current shortcomings of importing attributes on Alembic point clouds following this tutorial by Entagma ).
But when I started to boil down my scene to create an "as simple as possible repro scene" I noticed that something is seriously broken, at least with points, Geometry Nodes and motion blur in Cycles.
I'm currently trying to work around by using instanced spheres instead of points but first results don't look too good either.
The error itself is that as soon as there's a "velocity" attribute on points and I use Motion Blur during rendering, the shading completely breaks. Even if the velocity vectors are at 0, 0, 0.
This is a render of the attached blend file without motion blur:

And this with motion blur on:

Notice the "velocity" attribute which is basically set to no motion whatsoever:
The render doesn't become better if I e.g. set it to any other values.
Exact steps for others to reproduce the error
Point_MB_v01.blend
It's just some points distributed on a grid
Added subscriber: @SteffenD
Added subscriber: @mod_moder
I can confirm behavior. But the velocity attribute must be used for blurring. And it's coming through. Just not sure what it should look like for velocity close to 0...
Thanks for confirming. A velocity vector of length 0 should result in no blurring at all. If you e.g. in my blend file manually set the velocity vectors to 0, 0, 10 (which should result in vertical motion blur), it looks like this

So there is a vertical blur but the spherical shape of the points is totally gone. In my renderings above you can also see that the size of the points gets visually smaller, even if there should be no blur.
Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Added subscriber: @HooglyBoogly
Based on the description I don't think this is related to geometry nodes directly. Thanks for the report.
Added subscriber: @EAW
I did test this in 3.4.1 and current master, and would like to note that with CPU rendering the issue doesn't occur.
(My GPU is too old to be used with Cycles.)
@SteffenD and @mod_moder, can either of you please re-test using CPU rendering to see if this is GPU only?
3.5 with Motion Blur
3.4.1 with Motion Blur and 10.0 velocity in Z.
Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Thx @EAW ! Now i see that this bug only for GPU render
Indeed, CPU rendering looks fine. Optix and CUDA are broken.
Thank you for testing. ☺️
This bug bit me again today. I had already forgotten about it, but it's annoying as hell.
Same problem here.
CPU Only:

GPU Only:

CPU + GPU (Mixes the results of both):

CPU+GPU Detail:

And I agree, this is dangerous for production and it's very annoying.
I don't see this bug assigned to anyone, so I'll mention @brecht because I think it's mainly related to Cycles and the Point Cloud implementation :)