Fix #103918: Cycles point cloud motion blur artifacts on the GPU

Change storage to consistently put xyz + radius in the motion blur attribute.

Pull Request: https://projects.blender.org/blender/blender/pulls/109830