intern/cycles/bvh/build.cpp
@@ -268,7 +268,7 @@ void BVHBuild::add_reference_points(BoundBox &root,
   const float3 *points_data = &pointcloud->points[0];
   const float *radius_data = &pointcloud->radius[0];
   const size_t num_points = pointcloud->num_points();
-  const float3 *motion_data = (point_attr_mP) ? point_attr_mP->data_float3() : NULL;
+  const float4 *motion_data = (point_attr_mP) ? point_attr_mP->data_float4() : NULL;
   const size_t num_steps = pointcloud->get_motion_steps();
 
   if (point_attr_mP == NULL) {
@@ -295,7 +295,7 @@ void BVHBuild::add_reference_points(BoundBox &root,
       BoundBox bounds = BoundBox::empty;
       point.bounds_grow(points_data, radius_data, bounds);
       for (size_t step = 0; step < num_steps - 1; step++) {
-        point.bounds_grow(motion_data + step * num_points, radius_data, bounds);
+        point.bounds_grow(motion_data[step * num_points + j], bounds);
       }
       if (bounds.valid()) {
         references.push_back(BVHReference(bounds, j, i, PRIMITIVE_MOTION_POINT));
@@ -315,7 +315,7 @@ void BVHBuild::add_reference_points(BoundBox &root,
     for (uint j = 0; j < num_points; j++) {
       const PointCloud::Point point = pointcloud->get_point(j);
       const size_t num_steps = pointcloud->get_motion_steps();
-      const float3 *point_steps = point_attr_mP->data_float3();
+      const float4 *point_steps = point_attr_mP->data_float4();
 
       /* Calculate bounding box of the previous time step.
        * Will be reused later to avoid duplicated work on
