intern/cycles/scene/pointcloud.cpp
@@ -33,7 +33,7 @@ void PointCloud::Point::bounds_grow(const float4 &point, BoundBox &bounds) const
 
 float4 PointCloud::Point::motion_key(const float3 *points,
                                      const float *radius,
-                                     const float3 *point_steps,
+                                     const float4 *point_steps,
                                      size_t num_points,
                                      size_t num_steps,
                                      float time,
@@ -55,7 +55,7 @@ float4 PointCloud::Point::motion_key(const float3 *points,
 
 float4 PointCloud::Point::point_for_step(const float3 *points,
                                          const float *radius,
-                                         const float3 *point_steps,
+                                         const float4 *point_steps,
                                          size_t num_points,
                                          size_t num_steps,
                                          size_t step,
@@ -72,10 +72,7 @@ float4 PointCloud::Point::point_for_step(const float3 *points,
       step--;
     }
     const size_t offset = step * num_points;
-    return make_float4(point_steps[offset + p].x,
-                       point_steps[offset + p].y,
-                       point_steps[offset + p].z,
-                       radius[offset + p]);
+    return point_steps[offset + p];
   }
 }
 
@@ -188,10 +185,10 @@ void PointCloud::compute_bounds()
     Attribute *attr = attributes.find(ATTR_STD_MOTION_VERTEX_POSITION);
     if (use_motion_blur && attr) {
       size_t steps_size = points.size() * (motion_steps - 1);
-      float3 *point_steps = attr->data_float3();
+      float4 *point_steps = attr->data_float4();
 
       for (size_t i = 0; i < steps_size; i++)
-        bnds.grow(point_steps[i]);
+        bnds.grow(float4_to_float3(point_steps[i]), point_steps[i].w);
     }
 
     if (!bnds.valid()) {
@@ -203,10 +200,10 @@ void PointCloud::compute_bounds()
 
       if (use_motion_blur && attr) {
         size_t steps_size = points.size() * (motion_steps - 1);
-        float3 *point_steps = attr->data_float3();
+        float4 *point_steps = attr->data_float4();
 
         for (size_t i = 0; i < steps_size; i++)
-          bnds.grow_safe(point_steps[i]);
+          bnds.grow_safe(float4_to_float3(point_steps[i]), point_steps[i].w);
       }
     }
   }
